--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>The Last Crusade</title>
     <style type="text/css">
       @import "http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dojo/resources/dojo.css";
-      @import "http://ajax.googleapis.com/ajax/libs/dojo/1.4.1/dijit/themes/tundra/tundra.css";
     </style>
     <script type="text/javascript">
         var djConfig = {
@@ -18,27 +17,23 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.5.0/dojo/dojo.xd.js"></script>
     <script type="text/javascript" src="/libs/uow/trace.js"></script>
     <script type="text/javascript" src="/libs/uow.js"></script>
-    <script type="text/javascript" src="lastCrusadeMain.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript">
-        //all these are used in the options dialog
         dojo.require('dijit.Dialog');
         dojo.require('dijit.layout.BorderContainer');
         dojo.require('dijit.layout.ContentPane');
     </script>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
   </head>
   <body class="tundra">
     <div dojoType="dijit.layout.BorderContainer" id = "mainContents" liveSplitters="true">
         <div dojoType="dijit.layout.ContentPane" region="top" id ="header" splitter="false">
-            <table width="100%">
-                <tr>
-                <td><h1><div id ="instructions">Welcome</div></h1></td>
-                </tr>
-            </table>
         </div>
         <div dojoType="dijit.layout.ContentPane" id="game" region="center" splitter="true">
-            <div dojoType="dijit.layout.ContentPane" id="actionPane" region="bottom" title="Hark the Sound Game">
-                <div id="gameGoesHere"></div>
-            </div>
+            <div>Hello</div>
+        </div>
+        <div dojoType="dijit.layout.ContentPane"region="bottom" splitter="true">
+            <div id="directions"></div>
         </div>
     </div>
     <!--<div id="loadingDialog" style="display: none" dojoType="dijit.Dialog" title="Loading">
