--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div dojoType="dijit.layout.ContentPane" region="top" id ="header" splitter="false">
         </div>
         <div dojoType="dijit.layout.ContentPane" id="game" region="center" splitter="true">
-            <div>Hello</div>
+            <div>The Last Crusade</div>
         </div>
         <div dojoType="dijit.layout.ContentPane"region="bottom" splitter="true">
             <div id="directions"></div>
