Sliders working, fade channel needs to be fixed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div dojoType="dijit.layout.ContentPane"region="bottom" splitter="true">
             <div id="directions"></div>
             <!---------------REMOVE AFTER MOVING TO HARK SITE---------->
+            <p style="text-align:left;">Sliders are temp until hooked into hark, just for testing</p>
             <p style="text-align:left;">Master</p>
             <div id="master"></div>
             <p style="text-align:left;">Speech Rate</p>
